# animal-hunt

./: .dockerignore  Cargo.toml  Dockerfile  README.md
ios/: project.yml
ios/AnimalHunt/: AnimalHunt.entitlements  AnimalHuntApp.swift  ConfigureView.swift  Core.swift  Info.plist  NFCCapability.swift  PracticeView.swift  RootView.swift
ios/AnimalHunt.xcodeproj/: project.pbxproj
ios/AnimalHunt.xcodeproj/project.xcworkspace/xcuserdata/viktor.xcuserdatad/: UserInterfaceState.xcuserstate
ios/AnimalHunt.xcodeproj/xcshareddata/xcschemes/: AnimalHunt.xcscheme
ios/AnimalHunt.xcodeproj/xcuserdata/viktor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/AnimalHunt.xcodeproj/xcuserdata/viktor.xcuserdatad/xcschemes/: xcschememanagement.plist
server/: Cargo.toml  Dockerfile  Makefile  fly.toml
server/animal-hunt-server.xcodeproj/: project.pbxproj
server/public/: apple-app-site-association  apple-app-site-association.json
server/src/: main.rs  pages.rs
server/src/pages/: templates.rs
shared/: .gitignore  Cargo.toml
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/project.xcworkspace/xcuserdata/viktor.xcuserdatad/: UserInterfaceState.xcuserstate
shared/shared.xcodeproj/xcshareddata/xcschemes/: shared-staticlib.xcscheme
shared/shared.xcodeproj/xcuserdata/viktor.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  lib.rs
shared/src/capabilities/: mod.rs  tag_reader.rs
shared_types/: Cargo.toml  build.rs
